fixed alignment of header

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .intro{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding-left: 70px;
 }
 .intro div{
     flex: 1 1 auto;
@@ -41,12 +45,16 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     height: fit-content;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 35px;
+
 }
 .navbar div{
     flex: 1 1 auto;
 }
 .navbar .nav-links{
-    padding-left: 970px;
+    padding-left: 900px;
 }
 .logo{
     width: 100px;
@@ -74,4 +82,15 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .content{
     width: 50%;
+}
+
+button{
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-size: 15px;
+    font-weight: bold;
+    border: 1px solid #f9faf8;
+    border-radius: 5px;
+    padding: 10px;
+    margin-top: 10px;
 }
